# TaskManagerConsole

./: CMakeLists.txt  README.md
include/: CommandHandler.hpp  FileManager.hpp  Task.hpp  TaskManager.hpp  VersionInfo.hpp
src/: CommandHandler.cpp  FileManager.cpp  Task.cpp  TaskManager.cpp  VersionInfo.cpp  main.cpp
